# teaching_2024_cps

./: .gitignore  README.md  playbook.ipynb  pyproject.toml
1-antlr/: Expr.g4  antlr.ipynb
3-bikes/: bikes.ipynb  location.py
4-pancreas/: pancreas.ipynb
5-gillespie/: gillespie.ipynb
lab-1/: getting_started.ipynb
lab-2/: lab2.0.ipynb  lab2.1.ipynb  location.py  pancreas.ipynb
lab-3/: ModelingAnAutomaticTransmissionControllerExample.m  VehicleManeuvers.mat  automaticExample_Taliro.m  opt_input.mat  sldemo_autotrans.slx  stoc_sim.ipynb
old/lab-2/: lab2.1.ipynb
old/lab-3/: stoc_sim.ipynb
