[tool.poetry]
name = "examples-2"
version = "0.1.0"
description = ""
authors = ["Ennio Visconti <ennio.visconti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
moonlight = "^0.3.0"
matplotlib = "^3.8.2"
ipykernel = "^6.27.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
